# python-project-52

./: .env  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml
task_manager/: .env  settings.py  urls.py  views.py
task_manager/labels/: models.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py
task_manager/task_manager/templates/: index.html
task_manager/tasks/: models.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0004_alter_task_name_alter_task_status.py
task_manager/templates/: base.html  footer.html  form.html  home.html  language_selector.html  login.html
task_manager/templates/components/: navigation.html
task_manager/templates/labels/: list.html
task_manager/templates/statuses/: delete.html  list.html
task_manager/templates/tasks/: delete.html  list.html  show.html
task_manager/templates/users/: delete.html
task_manager/users/: admin.py  models.py  views.py
task_manager/users/migrations/: 0001_initial.py
